Commiting the JPA strcuture, Services and DAO implementations for product and order entities.

--- a/src/com/omazon/webapp/WEB-INF/config/jdbc.properties
+++ b/src/com/omazon/webapp/WEB-INF/config/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=org.postgresql.Driver
 jdbc.dialect=org.hibernate.dialect.PostgreSQLDialect
-jdbc.databaseurl=jdbc:postgresql://localhost:5432/omazon_app
+jdbc.databaseurl=jdbc:postgresql://localhost:5432/omazon
 jdbc.username=postgres
 jdbc.password=postgres
